--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.53.0",
     "recharts": "^2.12.0",
+    "resend": "^6.9.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.0",
     "zod": "^3.23.0"
