--- a/.env.local.example
+++ b/.env.local.example
@@ -7,5 +7,6 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_APP_NAME=Base Water Chemicals - Service Manager
 
-# Resend Email
-RESEND_API_KEY=your_resend_api_key
+# Gmail SMTP
+GMAIL_USER=info@abijithcb.com
+GMAIL_APP_PASSWORD=your_gmail_app_password
