--- a/package.json
+++ b/package.json
@@ -30,18 +30,19 @@
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.441.0",
     "next": "^16.1.6",
+    "nodemailer": "^8.0.1",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.53.0",
     "recharts": "^2.12.0",
-    "resend": "^6.9.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@types/nodemailer": "^7.0.10",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "autoprefixer": "^10.4.0",
