--- a/.env.local.example
+++ b/.env.local.example
@@ -10,3 +10,11 @@ NEXT_PUBLIC_APP_NAME=Base Water Chemicals - Service Manager
 # Gmail SMTP
 GMAIL_USER=info@abijithcb.com
 GMAIL_APP_PASSWORD=your_gmail_app_password
+
+# Gemini AI
+GEMINI_API_KEY=your_gemini_api_key
+GEMINI_MODEL=gemini-2.0-flash
+
+# OpenRouter AI
+OPENROUTER_API_KEY=your_openrouter_api_key
+OPENROUTER_MODEL=arcee-ai/trinity-large-preview:free
