Add WhatsApp reminders, manual service notifications UI, and dashboard/service flow fixes

--- a/.env.local.example
+++ b/.env.local.example
@@ -18,3 +18,8 @@ GEMINI_MODEL=gemini-2.0-flash
 # OpenRouter AI
 OPENROUTER_API_KEY=your_openrouter_api_key
 OPENROUTER_MODEL=arcee-ai/trinity-large-preview:free
+
+# Fast2SMS WhatsApp
+FAST2SMS_API_KEY=your_fast2sms_api_key
+FAST2SMS_WHATSAPP_MESSAGE_ID=13504
+FAST2SMS_WHATSAPP_PHONE_NUMBER_ID=913139511894019
